# pyCombiners

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  b_jpsi_kstar_walkthrough.md  mini_tutorial.md  physics_review.md
docs/web/: README.md  index.html  styles.css  web.js
examples/: README.md  b_jpsi_kstar_fake_and_combine.py  b_jpsi_kstar_study.py  custom_analysis.py  events.json  inspect_table.py  masses_2body.json  masses_3body.json  masses_4body.json  masses_pid_2body.json  multi_event_api.py  new_decay_channel_template.py  peak_study.py  primary_vertex.json  stepwise_decay_examples.py  tracks.json
examples/custom_scripts/: README.md  filter_and_dump.py  top_candidates.py
src/: README.md
src/trackcomb/: README.md  __init__.py  __main__.py  cli.py  combiner.py  composite.py  io.py  models.py  physics.py  pid.py
tests/: README.md  test_chi2_filters.py  test_combiner_operations.py  test_io_loaders.py
