[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "track-combination-framework"
version = "0.1.0"
description = "Standalone framework for n-body track combinations with Lorentz vectors and time-chi2 matching"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Track Combination Framework" }]
dependencies = [
  "pandas>=2.0",
  "pyarrow>=12.0",
]

[project.scripts]
track-combiner = "trackcomb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
